[metadata]
name = qmotion-qsync
version = 0.1.0
description = Control Qmotion Gen2 shades using Qsync device
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tmoran3020/qmotion-qsync
author = Tim Moran
keywords = qmotion, qsync
license = MIT
classifiers = 
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = qmotion_qsync
include_package_data = True
